[update] Refactor DateJumpService to use TodayService and enhance date visibility logic in IssueColumnComponent

--- a/src/app/chart-area/issue-column/issue-column.component.scss
+++ b/src/app/chart-area/issue-column/issue-column.component.scss
@@ -73,5 +73,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &.hidden {
+      color: transparent;
+    }
   }
 }
